--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
@@ -20,7 +20,10 @@
             android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/dummy_line" />
+            android:layout_below="@+id/dummy_line"
+            android:background="@color/grey_light"
+            android:divider="@color/transparent"
+            android:drawSelectorOnTop="true" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
