--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_bookmarked_blogs_tab.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_bookmarked_blogs_tab.xml
@@ -15,7 +15,10 @@
         android:id="@+id/bookmarkedBlogsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:background="@color/grey_light"
+        android:divider="@color/transparent"
+        android:drawSelectorOnTop="true" />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
