--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -88,7 +88,7 @@
 
     <color name="blogger_name_bg">#119EE8</color>
     <color name="blogger_listing_bg">#F0F3FF</color>
-    <color name="gray_color"> #e5e5e5</color>
+    <color name="gray_color">#e5e5e5</color>
     <color name="faded_text">#a5a5a5</color>
     <color name="faded_italic">#c1c1c1</color>
 
@@ -114,5 +114,6 @@
     <color name="authortype.colorcode.expert">#7db412</color>
     <color name="authortype.colorcode.editorial">#e96e01</color>
     <color name="authortype.colorcode.editor">#5d71ca</color>
+    <color name="articlelist.background">#EBFFFFFF</color>
 
 </resources>
