--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_event_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_event_dashboard.xml
@@ -117,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:padding="2dp"
-                            android:src="@drawable/location_upcomingevents_new" />
+                            android:src="@drawable/location_icon" />
 
                         <TextView
                             android:id="@+id/addresstxt"
