--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -58,7 +58,7 @@
                 android:drawableLeft="@drawable/today_icon"
                 android:drawablePadding="10dp"
                 android:padding="12dp"
-                android:text="MYCITY4KIDS TODAY"
+                android:text="HOME"
                 android:textColor="@color/white_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -204,7 +204,7 @@
             android:id="@+id/editor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="22dp"
             android:drawableLeft="@drawable/icon_add_blog"
             android:drawablePadding="10dp"
             android:paddingLeft="12dp"
@@ -217,7 +217,7 @@
             android:id="@+id/drafts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="17dp"
             android:drawableLeft="@drawable/icon_drafts"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
@@ -231,7 +231,7 @@
             android:id="@+id/bloggerDashboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="17dp"
             android:drawableLeft="@drawable/icon_my_blogs"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
@@ -245,7 +245,7 @@
             android:id="@+id/txvSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="17dp"
             android:drawableLeft="@drawable/settings_new"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
@@ -254,12 +254,26 @@
             android:text="SETTINGS"
             android:textColor="@color/white_color"
             android:textSize="12sp" />
+        <TextView
+            android:id="@+id/txvMeetContributors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:drawableLeft="@drawable/settings_new"
+            android:drawablePadding="10dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="12dp"
+            android:paddingTop="5dp"
+            android:text="MEET OUR CONTRIBUTORS"
+            android:textColor="@color/white_color"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/feed_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginBottom="8dp"
             android:drawableLeft="@drawable/feedback_xxhdpi"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
