--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_new_listitem_business.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_new_listitem_business.xml
@@ -1,168 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingBottom="3dp"
-    android:paddingTop="3dp">
+    android:layout_height="wrap_content">
 
-
-    <LinearLayout
-        android:id="@+id/leftpane"
-        android:layout_width="85dp"
-        android:layout_height="88dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
-        android:layout_weight="2.5"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/colorcodeevent"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="2dp"
+        card_view:cardElevation="4dp">
 
         <RelativeLayout
-            android:id="@+id/fmlayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp">
 
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/thumbnail_eventsxxhdpi" />
 
-            <View
-                android:id="@+id/transparentView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#40000000" />
+            <LinearLayout
+                android:id="@+id/leftpane"
+                android:layout_width="85dp"
+                android:layout_height="88dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
+                android:layout_weight="2.5"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textdate"
+                <LinearLayout
+                    android:id="@+id/colorcodeevent"
+                    android:layout_width="5dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" />
+
+                <RelativeLayout
+                    android:id="@+id/fmlayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/thumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/thumbnail_eventsxxhdpi" />
+
+                    <View
+                        android:id="@+id/transparentView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#40000000" />
+
+                    <TextView
+                        android:id="@+id/textdate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="4dp"
+                        android:shadowDx="1"
+                        android:shadowDy="1"
+                        android:shadowRadius="5"
+                        android:text="date"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/midpane"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="4dp"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="5"
-                android:text="date"
-                android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:textStyle="bold" />
+                android:layout_toLeftOf="@+id/rightpane"
+                android:layout_toRightOf="@+id/leftpane"
+                android:gravity="top"
+                android:orientation="vertical"
+                android:paddingBottom="2dp">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:maxLines="2"
+                    android:text="name"
+                    android:textColor="#424242"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:id="@+id/slg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/name"
+                    android:layout_marginBottom="1dp"
+                    android:layout_marginTop="1dp"
+                    android:ellipsize="end"
+                    android:fontFamily="sans-serif"
+                    android:singleLine="true"
+                    android:text="ssdkksss..."
+                    android:textColor="#5F5F5F"
+                    android:textSize="12dp" />
+
+                <LinearLayout
+                    android:id="@+id/layoutadress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/slg"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/addressicon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="2dp"
+                        android:src="@drawable/location_upcomingevents_new" />
+
+                    <TextView
+                        android:id="@+id/addresstxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:fontFamily="sans-serif-light"
+                        android:text="address"
+                        android:textSize="12dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layoutduration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/layoutadress"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/durationicon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="2dp"
+                        android:src="@drawable/clock_new" />
+
+                    <TextView
+                        android:id="@+id/durationtxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:fontFamily="sans-serif-light"
+                        android:text="time"
+                        android:textSize="12dp" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/rightpane"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/statusimg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:src="@drawable/add_red" />
+
+            </LinearLayout>
+
         </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/midpane"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/rightpane"
-        android:layout_toRightOf="@+id/leftpane"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:paddingBottom="2dp">
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:maxLines="2"
-            android:text="name"
-            android:textColor="#424242"
-            android:textSize="15dp" />
-
-        <TextView
-            android:id="@+id/slg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/name"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="1dp"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif"
-            android:singleLine="true"
-            android:text="ssdkksss..."
-            android:textColor="#5F5F5F"
-            android:textSize="12dp" />
-
-        <LinearLayout
-            android:id="@+id/layoutadress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/slg"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/addressicon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="2dp"
-                android:src="@drawable/location_upcomingevents_new" />
-
-            <TextView
-                android:id="@+id/addresstxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="sans-serif-light"
-                android:text="address"
-                android:textSize="12dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layoutduration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/layoutadress"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/durationicon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="2dp"
-                android:src="@drawable/clock_new" />
-
-            <TextView
-                android:id="@+id/durationtxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="sans-serif-light"
-                android:text="time"
-                android:textSize="12dp" />
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/rightpane"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/statusimg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:src="@drawable/add_red" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
