--- a/MyCity4Kids/MyCity4Kids/res/menu/blog_menu.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/blog_menu.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search_white_48dp"
+        android:orderInCategory="100"
+        android:title="Search"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/filter"
         android:icon="@drawable/alphabetic_order"
         android:orderInCategory="100"
