--- a/MyCity4Kids/MyCity4Kids/res/drawable/bg_edittext.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/bg_edittext.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
         android:width="1dp"
-        android:color="#bb9e7f" />
-<solid 
-    android:color="#ffffff"/>
-    <corners android:radius="10dp" />
+        android:color="#d7d7d7" />
+    <solid android:color="#ffffff" />
+    <corners android:radius="100dp" />
 
 </shape>
