--- a/MyCity4Kids/MyCity4Kids/res/layout/add_article_topics_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_article_topics_activity.xml
@@ -4,6 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -16,14 +17,26 @@
         android:id="@+id/parentExpandableListView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/done"
+        android:layout_above="@+id/nextButton"
         android:layout_below="@+id/toolbar"
         android:groupIndicator="@null" />
 
-    <TextView
-        android:id="@+id/done"
+    <Button
+        android:id="@+id/nextButton"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="main_no_items" />
+        android:layout_below="@+id/articleImage"
+        android:layout_margin="10dp"
+        android:background="@color/primary"
+        android:text="Apply"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 </RelativeLayout>
