--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_filter_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_filter_activity.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize" />
 
     <ExpandableListView
         android:id="@+id/parentExpandableListView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/empty"
+        android:layout_above="@+id/filterButtton"
+        android:layout_below="@+id/toolbar"
         android:groupIndicator="@null" />
 
-    <TextView
-        android:id="@+id/empty"
+    <Button
+        android:id="@+id/filterButtton"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="main_no_items" />
+        android:layout_below="@+id/articleImage"
+        android:layout_margin="10dp"
+        android:background="@color/primary"
+        android:text="Apply"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 </RelativeLayout>
