--- a/MyCity4Kids/MyCity4Kids/res/layout/verify_email_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/verify_email_dialog_fragment.xml
@@ -15,7 +15,7 @@
         android:background="@null"
         android:drawableBottom="@drawable/underline"
         android:hint="Enter Email"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:singleLine="true"
         android:textColor="@color/black_color" />
