--- a/MyCity4Kids/MyCity4Kids/res/layout/verify_email_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/verify_email_dialog_fragment.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     android:padding="15dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="Your facebook account does not have an email associated with it. Please enter email to continue."
+        android:textColor="@color/black_color"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/emailTextView"
