--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -73,7 +73,7 @@
                         android:id="@+id/blogprogressbar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
 
                     <TextView
                         android:id="@+id/no_blog"
