--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_description_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_description_activity.xml
@@ -174,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:padding="12dp"
-                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />
+                android:src="@drawable/back_arroow" />
         </RelativeLayout>
 
         <RelativeLayout
