--- a/MyCity4Kids/MyCity4Kids/res/layout/blogger_section_tabs.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blogger_section_tabs.xml
@@ -9,9 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/blogName"
-        android:background="@color/login_grey"
-
-        ></View>
+        android:background="@color/login_grey" />
 
     <LinearLayout
         android:id="@+id/tabs"
@@ -22,11 +20,13 @@
         android:weightSum="4">
 
         <LinearLayout
+            android:id="@+id/draftItemLinearlayout"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/draftImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -37,33 +37,35 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/login_grey"></View>
+            android:background="@color/login_grey" />
 
         <LinearLayout
+            android:id="@+id/publishedItemLinearlayout"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/publishedImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/icon_publish"
-
-                />
+                android:src="@drawable/icon_publish" />
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/login_grey"></View>
+            android:background="@color/login_grey" />
 
         <LinearLayout
+            android:id="@+id/commentsItemLinearlayout"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/commentsImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -73,14 +75,16 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/login_grey"></View>
+            android:background="@color/login_grey" />
 
         <LinearLayout
+            android:id="@+id/reviewItemLinearLayout"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/reviewImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -92,6 +96,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/tabs"
-        android:background="@color/login_grey"></View>
+        android:background="@color/login_grey" />
 
 </LinearLayout>
