--- a/MyCity4Kids/MyCity4Kids/res/layout/draft_listview.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/draft_listview.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@color/primary"
-        android:minHeight="?attr/actionBarSize">
-    </android.support.v7.widget.Toolbar>
+        android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+
     <TextView
         android:id="@+id/noDraftsTextView"
         android:layout_width="wrap_content"
@@ -19,11 +21,10 @@
         android:visibility="gone" />
 
     <ListView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/draftListview"
-    android:layout_below="@+id/toolbar">
-</ListView>
+        android:id="@+id/draftListview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"></ListView>
     <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/add_task"
         android:layout_width="wrap_content"
